# projectAres

projectAres/: README.md  index.html  package-lock.json  package.json
projectAres/src/: App.css  App.tsx  types.ts
projectAres/src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
projectAres/src-tauri/icons/: icon.icns
projectAres/src-tauri/src/: lib.rs  main.rs
projectAres/src-tauri/src/commands/: mod.rs
projectAres/src-tauri/src/modules/: docx_reader.rs  mod.rs  odt_reader.rs  parser.rs  pdf_reader.rs  storage.rs
projectAres/src/views/: HistorialView.tsx  ResultsView.tsx  TestView.tsx  UploadView.tsx
