[package]
name = "testapp"
version = "0.1.0"
description = "App de test de oposiciones"
authors = []
edition = "2021"

[lib]
name = "testapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf-extract = "0.7"
zip = "0.6"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = "s"
